[feat] auth register
